--- a/dessertshop_demo/css/styles.css
+++ b/dessertshop_demo/css/styles.css
@@ -5,7 +5,7 @@ body {
   padding-left: 15%;
   padding-right: 15%;
   line-height: 1.5;
-  color: dimgray;
+  color: gray;
   background: #FFF3D3;
 }
 
